퇴근 예정시간 계산 로직 추가

--- a/Working_Time_Calculator/Working_Time_Calculator.ipynb
+++ b/Working_Time_Calculator/Working_Time_Calculator.ipynb
@@ -123,7 +123,12 @@
     "        # 시간 계산\n",
     "        if end_time == '': # 퇴근 시간을 입력하지 않을 경우 현재 시점으로 계산\n",
     "            end_time = datetime.datetime.now()\n",
-    "#             end_time ="
+    "#             end_time =\n",
+    "\n",
+    "\n",
+    "    def get_end_time(self, plan_time):\n",
+    "        \n",
+    "        return"
    ]
   },
   {
