코드 추가 개발

--- a/Working_Time_Calculator/Working_Time_Calculator.ipynb
+++ b/Working_Time_Calculator/Working_Time_Calculator.ipynb
@@ -128,6 +128,9 @@
     "\n",
     "    def get_end_time(self, plan_time):\n",
     "        \n",
+    "        finish_time_h = ''\n",
+    "        finish_time_m = ''\n",
+    "        print(f\"오늘의 퇴근 예정 시간은 {int(finish_time_h):02d}:{int(finish_time_m)} 입니다.\")\n",
     "        return"
    ]
   },
