코드 업데이트

--- a/Working_Time_Calculator/Working_Time_Calculator.ipynb
+++ b/Working_Time_Calculator/Working_Time_Calculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,23 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(columns = ['date', 'month', 'week_num', 'week_day', 'start_time', 'end_time', 'spend_time', 'rest_time'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
     "class working_time_calculator:\n",
     "    def __init__(self):\n",
     "#         self.work_time_table = pd.read_csv(file_path)\n",
-    "        self.work_time_table = pd.DataFrame(columns = ['date', 'month', 'week_num', 'weekday', 'start_time', 'end_time', 'spend_time', 'rest_time'])\n",
+    "        self.work_time_table = pd.DataFrame(columns = ['date', 'month', 'week_num', 'week_day', 'start_time', 'end_time', 'spend_time', 'rest_time'])\n",
     "        self.rest_time = 1\n",
     "        \n",
     "        self.days_dic = {\n",
@@ -60,8 +51,23 @@
     "        week_day = self.days_dic[start_time.isoweekday()]\n",
     "        start_time = datetime.datetime.strftime(start_time, '%Y-%m-%d %H:%M')\n",
     "        \n",
-    "        self.work_time_table.loc[len(self.work_time_table)] =\\\n",
-    "        [date, month, week_num, week_day, start_time, np.nan, np.nan, self.rest_time]\n",
+    "        # 해당 일자의 데이터가 있을 경우, 없을 경우로 구분\n",
+    "        # 없을 경우 - 신규 데이터 입력\n",
+    "        # 없을 경우 - 기존 출근 시간을 수정\n",
+    "        update_state = not self.work_time_table.loc[self.work_time_table['date'] == date].empty\n",
+    "        \n",
+    "        if update_state:\n",
+    "            update_row = pd.DataFrame([[date, month, week_num, week_day, start_time]],\n",
+    "                                      columns = ['date', 'month', 'week_num', 'week_day', 'start_time'])\n",
+    "            self.work_time_table.where(self.work_time_table['date'] == date).update(update_row)\n",
+    "            \n",
+    "            # end_time까지 입력되어 있는 경우라면 spend_time도 다시 계산해주어야 한다.\n",
+    "            if self.work_time_table.where(self.work_time_table['date'] == date)['end_time'].notnull()[0]:\n",
+    "                self.get_spend_time(date)\n",
+    "        \n",
+    "        else:\n",
+    "            self.work_time_table.loc[len(self.work_time_table)] =\\\n",
+    "            [date, month, week_num, week_day, start_time, np.nan, np.nan, self.rest_time]\n",
     "        \n",
     "        return\n",
     "        \n",
@@ -73,18 +79,22 @@
     "            end_time = datetime.datetime.fromisoformat(end_time)\n",
     "        \n",
     "        # end_time이 24시를 넘겼을 경우에 대한 고려가 필요\n",
-    "        date \n",
+    "        date = datetime.datetime.strftime(end_time, '%Y%m%d')\n",
+    "        end_time = datetime.datetime.strftime(end_time, '%Y-%m-%d %H:%M')\n",
     "        \n",
-    "        input_time = datetime.datetime.now()\n",
+    "        # input\n",
+    "        self.work_time_table.loc[self.work_time_table['date'] == date, 'end_time'] = end_time\n",
     "        \n",
-    "        input_day = datetime.datetime.strftime(input_time, '%Y%m%d')\n",
-    "        input_time = datetime.datetime.strftime(input_time, '%Y-%m-%d %H:%M')\n",
+    "        # spend_time 계산\n",
+    "        self.get_spend_time(date)\n",
     "        \n",
-    "        # spend time 계산\n",
-    "        start_time = self.work_time_table.loc[self.work_time_table['date'] == input_day]['start_time'].values[0]\n",
+    "        return\n",
+    "\n",
+    "    def get_spend_time(self, date):\n",
+    "        start_time, end_time = self.work_time_table.loc[self.work_time_table['date'] == date][['start_time', 'end_time']].values[0]\n",
     "        \n",
     "        start_time = datetime.datetime.fromisoformat(start_time)\n",
-    "        end_time = datetime.datetime.fromisoformat(input_time)\n",
+    "        end_time = datetime.datetime.fromisoformat(end_time)\n",
     "        \n",
     "        spend_time = end_time - start_time - datetime.timedelta(hours = 1)\n",
     "        spend_time = spend_time.total_seconds()\n",
@@ -103,73 +113,19 @@
     "            spend_time = f'-{spend_hours:02d}:{spend_minutes:02d}'\n",
     "        \n",
     "        # input\n",
-    "        self.work_time_table.loc[self.work_time_table['date'] == input_day, ('end_time', 'spend_time')] = (input_time, spend_time)\n",
+    "        self.work_time_table.loc[self.work_time_table['date'] == date, 'spend_time'] = spend_time\n",
     "        \n",
     "        return\n",
-    "\n",
-    "    def insert_work_time(self, start_time, end_time = '', rest_time = 1, input_day = None): # time은 HH:MM 형태의 스트링으로 입력\n",
-    "        # 날짜 계산\n",
-    "        if input_day == None:\n",
-    "            input_day = datetime.datetime.now()\n",
-    "\n",
-    "            input_weekday = self.days_dic[input_day.isoweekday()]\n",
-    "            input_weeknum = input_day.isocalendar()[1]\n",
-    "            input_day = datetime.datetime.strftime(input_day, '%Y%m%d')\n",
-    "\n",
-    "        else:\n",
-    "            input_weekday = days_dic[datetime.datetime.strptime(input_day, '%Y%m%d').isoweekday()]\n",
-    "            input_weeknum = input_day.isocalendar().week\n",
-    "\n",
-    "        # 시간 계산\n",
-    "        if end_time == '': # 퇴근 시간을 입력하지 않을 경우 현재 시점으로 계산\n",
-    "            end_time = datetime.datetime.now()\n",
-    "#             end_time =\n",
-    "\n",
-    "\n",
+    "        \n",
     "    def get_end_time(self, plan_time):\n",
     "        \n",
     "        finish_time_h = ''\n",
     "        finish_time_m = ''\n",
     "        print(f\"오늘의 퇴근 예정 시간은 {int(finish_time_h):02d}:{int(finish_time_m)} 입니다.\")\n",
-    "        return"
+    "        return\n",
+    "    \n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = working_time_calculator()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
