시간 업데이트 코드 수정

--- a/Working_Time_Calculator/Working_Time_Calculator.ipynb
+++ b/Working_Time_Calculator/Working_Time_Calculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "3d0f128b",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 61,
    "id": "6bb1ca10",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
     "        if update_state:\n",
     "            update_row = pd.DataFrame([[date, month, week_num, week_day, start_time]],\n",
     "                                      columns = ['date', 'month', 'week_num', 'week_day', 'start_time'])\n",
-    "            self.work_time_table.where(self.work_time_table['date'] == date).update(update_row)\n",
+    "            self.work_time_table.update(update_row)\n",
     "            \n",
     "            # end_time까지 입력되어 있는 경우라면 spend_time도 다시 계산해주어야 한다.\n",
     "            if self.work_time_table.where(self.work_time_table['date'] == date)['end_time'].notnull()[0]:\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 14,
    "id": "45166467",
    "metadata": {},
    "outputs": [],
@@ -217,128 +217,6 @@
    "outputs": [],
    "source": [
     "work_data.work_time_table = df.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "id": "74fb163c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>month</th>\n",
-       "      <th>week_num</th>\n",
-       "      <th>week_day</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>end_time</th>\n",
-       "      <th>spend_time</th>\n",
-       "      <th>rest_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20240502</td>\n",
-       "      <td>202405</td>\n",
-       "      <td>18</td>\n",
-       "      <td>목요일</td>\n",
-       "      <td>2024-05-02 09:54</td>\n",
-       "      <td>2024-05-02 17:06</td>\n",
-       "      <td>06:12</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20240503</td>\n",
-       "      <td>202405</td>\n",
-       "      <td>18</td>\n",
-       "      <td>금요일</td>\n",
-       "      <td>2024-05-03 08:55</td>\n",
-       "      <td>2024-05-03 18:01</td>\n",
-       "      <td>08:06</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20240507</td>\n",
-       "      <td>202405</td>\n",
-       "      <td>19</td>\n",
-       "      <td>화요일</td>\n",
-       "      <td>2024-05-07 09:46</td>\n",
-       "      <td>2024-05-07 20:05</td>\n",
-       "      <td>09:19</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20240508</td>\n",
-       "      <td>202405</td>\n",
-       "      <td>19</td>\n",
-       "      <td>수요일</td>\n",
-       "      <td>2024-05-08 09:26</td>\n",
-       "      <td>2024-05-08 20:00</td>\n",
-       "      <td>09:34</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20240509</td>\n",
-       "      <td>202405</td>\n",
-       "      <td>19</td>\n",
-       "      <td>목요일</td>\n",
-       "      <td>2024-05-09 09:44</td>\n",
-       "      <td>2024-05-09 16:35</td>\n",
-       "      <td>05:51</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       date   month  week_num week_day        start_time          end_time  \\\n",
-       "0  20240502  202405        18      목요일  2024-05-02 09:54  2024-05-02 17:06   \n",
-       "1  20240503  202405        18      금요일  2024-05-03 08:55  2024-05-03 18:01   \n",
-       "2  20240507  202405        19      화요일  2024-05-07 09:46  2024-05-07 20:05   \n",
-       "3  20240508  202405        19      수요일  2024-05-08 09:26  2024-05-08 20:00   \n",
-       "4  20240509  202405        19      목요일  2024-05-09 09:44  2024-05-09 16:35   \n",
-       "\n",
-       "  spend_time  rest_time  \n",
-       "0      06:12          1  \n",
-       "1      08:06          1  \n",
-       "2      09:19          1  \n",
-       "3      09:34          1  \n",
-       "4      05:51          1  "
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "work_data.work_time_table"
    ]
   },
   {
